--- a/public/COMP4711/MemoryGame/CSS/memory.css
+++ b/public/COMP4711/MemoryGame/CSS/memory.css
@@ -39,6 +39,10 @@ h1 {
     flex-wrap: wrap; */
 }
 
+.inputContainer {
+    text-align: center;
+}
+
 .button_container {
     margin: 20px;
     text-align: center;
@@ -56,5 +60,15 @@ h1 {
 
 .rotateZ90 {
     transform: rotateZ(90deg);
+    transition: all 1s ease-in-out;
+}
+
+.shrink {
+    height: 0;
+    transition: all 1s ease-in-out;
+}
+
+.expand {
+    height: 100%;
     transition: all 1s ease-in-out;
 }
