Prevent user from click while page is performing animations. Also implemented level down logic

--- a/public/COMP4711/MemoryGame/CSS/memory.css
+++ b/public/COMP4711/MemoryGame/CSS/memory.css
@@ -17,6 +17,12 @@ h1 {
     text-align: center;
 }
 
+button {
+    width: 20vw;
+    height: 10vh;
+    background-color: silver;
+}
+
 .score_board {
     text-align: center;
 }
